# Clio-Agent

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DEVELOPERS.md  QUICKSTART.md  README.md  RELEASE_v1.8.0.md  _setting_patch.py  _tmp_insert_reset.py  agent_core.py  bootstrap.sh  config.yaml  config.yaml.example  environment_report.json  install.sh  pyproject.toml  run.py  run.py.backup2  run_patch.py  smoke_test.py
docker/: README.md  docker-compose.yml
docker/rockylinux/: Dockerfile
docker/ubuntu/: entrypoint.sh
docker/windows/: entrypoint.ps1
docs/: CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  ERROR_HANDLING.md  OLLAMA_INTEGRATION.md  PARALLEL_TOOLS.md  README.md  SELF_HEALING_ARCHITECTURE.md  TROUBLESHOOTING.md  agent-loop.md  config-reference.md
examples/: tool_usage_demo.py
external_integration/: discord_bot.py  google_provider.py  model_runner.py  multi_provider_vision_client.py  ollama_provider.py  openrouter_provider.py  telegram_bot.py  vision_api_client.py
external_integration/yellow_selection/: README.md  clean_hierarchical_selector.py  clean_interactive_menu.py  fallback_interactive_menu.py
gui/: __init__.py  app.py  launcher.py  main_window.py  resources.py  theme.py
neuro-scaffold/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
neuro-scaffold/src/neuro_scaffold/: __init__.py
neuro-scaffold/src/neuro_scaffold/agent/: __init__.py  models.py  state_machine.py
neuro-scaffold/src/neuro_scaffold/config/: __init__.py  prompts.py  settings.py
neuro-scaffold/src/neuro_scaffold/context/: __init__.py  ast_mapper.py  retriever.py
neuro-scaffold/src/neuro_scaffold/gateway/: __init__.py  server.py
neuro-scaffold/src/neuro_scaffold/security/: __init__.py  auth.py  sandbox.py
neuro-scaffold/src/neuro_scaffold/tools/: __init__.py  editing.py  linter.py  shell.py
neuro-scaffold/tests/: conftest.py
neuro-scaffold/tests/integration/: test_agent_loop.py
neuro-scaffold/tests/unit/: test_context.py  test_security.py  test_tools_editing.py  test_tools_linter.py  test_tools_shell.py
peripherals/: FIXES_SUMMARY.md  LICENSE  check_environment.py  check_models.py  config.example.yaml  manage_sdks.py  pyproject.toml  requirements-core.txt  requirements-optional.txt  requirements.txt  system_check.py
peripherals/Groq/: README.md  groq_hello.py  groq_models.py
peripherals/api/: README.md  __init__.py  amazon_client.py  anthropic_client.py  base.py  cohere_client.py  deepseek_client.py  google_client.py  groq_client.py  integration_example.py  meta_client.py  microsoft_client.py  minimax_client.py  mistral_client.py  openai_client.py  together_client.py  usage_example.py  xai_client.py  zhipuai_client.py
src/: clio_agent.py
src/ai_agent/: __init__.py  external_integration
src/ai_agent/core_processing/: __init__.py  _check_syntax.py  agent_schema.py  autonomous_loop_engine.py  context_manager.py  executor.py  loop_controller.py  planner.py  terminal_history.py
src/ai_agent/core_processing/external_loop_observer/: __init__.py  action_normalizer.py  intervention.py  observer.py  pattern_analyzer.py
src/ai_agent/external_integration/: discord_bot.py  google_provider.py  model_runner.py  ollama_provider.py  openrouter_provider.py  telegram_bot.py  vision_api_client.py
src/ai_agent/platform_abstraction/: platform_detector.py
src/ai_agent/plugins/: __init__.py  example_plugin.py
src/ai_agent/sub_agents/: __init__.py  base.py  context.py  manager.py  registry.py
src/ai_agent/sub_agents/agents/: __init__.py  architect_agent.py  coder_agent.py  coding_agent.py  research_agent.py  review_agent.py
src/ai_agent/sub_agents/prompts/: __init__.py  architect_prompts.py  coder_prompts.py  coding_prompts.py  research_prompts.py  review_prompts.py
src/ai_agent/tools/: __init__.py  base.py  bash.py  delegate_sub_agent.py  exceptions.py  file_edit.py  file_read.py  file_write.py  glob.py  grep.py  memo.py  sub_agent.py  todo_list.py
src/ai_agent/user_interface/: __init__.py  five_phase_app.py
src/ai_agent/utils/: config.py  config_flow.py  cost_manager.py  curses_menu.py  dependency_checker.py  environment_detector.py  eternal_supervisor.py  interactive_menu.py  logger.py  model_definitions.py  ollama_error_handler.py  ollama_manager.py  ollama_model_selector.py  prompt_cache.py  provider_fallback.py  resilience_engine.py  rich_console.py  sdk_installer.py  security.py  settings_manager.py  structured_logger.py  unified_model_selector.py  watchdog.py
tests/: test_autonomous_loop_engine.py  test_bootstrap.py  test_bootstrap_fixes.py  test_environment_setup_fixes.py  test_external_loop_observer.py  test_recovery_system.py  test_repetition_breaker.py
